debut et fin de la partie services

--- a/index.html
+++ b/index.html
@@ -232,6 +232,31 @@
         </div>
     </div>
 
+    <div class="services" id="services">
+        <div class="services-cards">
+            <div class="services-cards-title">
+                <h1>Mes services</h1>
+                <h2>Etant un développeur FrontEnd, j'ai deux services à vous presenter dans ce domaine.</h2>
+            </div>
+            <div class="services-cards-container">
+                <div class="services-cards-container-card">
+                    <ion-icon name="globe-outline" class="circle"></ion-icon>
+                    <h2>DEVELOPPEMENT WEB</h2>
+                    <p>
+                        Je développe des sites et applications web responsive dans lesquels j'utilise mon inspiration pour avoir une interface belle et compréhensible par l'utilisateur tout en respectant les demandes des clients.
+                    </p>
+                </div>
+                <div class="services-cards-container-card">
+                    <ion-icon name="phone-portrait-outline" class="circle"></ion-icon>
+                    <h2>DEVELOPPEMENT MOBILE</h2>
+                    <p>
+                        Je développe des interfaces pour les applications android avec precautions sur les bésoins du client.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="other" id="other">
         <div class="other-container">
             <div class="other-container-certification">
