ajout des effets sur la partie other

--- a/index.html
+++ b/index.html
@@ -250,19 +250,27 @@
                     <ion-icon name="phone-portrait-outline" class="circle"></ion-icon>
                     <h2>DEVELOPPEMENT MOBILE</h2>
                     <p>
-                        Je développe des interfaces pour les applications android avec precautions sur les bésoins du client.
+                        Je développe des interfaces pour des applications android avec precautions sur les bésoins du client.
                     </p>
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="experience" id="experience">
+
+    </div>
+
     <div class="other" id="other">
         <div class="other-container">
             <div class="other-container-certification">
                 <h1>Mes certifications</h1>
-                <h2>J'ai eu à faire beaucoup de formation <a href="https://openclassrooms.com/fr/" target="_blank">OpenClassrooms</a> où j'ai acquis la majorité des bases de mes connaissances sur le web. <i>Consultez les en cliquant sur l'image :)</i> </h2>
-                <a href="https://drive.google.com/drive/folders/1mTQ98vR_POncLTRs8jGD4eTJoI5U5jHU?usp=sharing" target="_blank"><img src="img/oc.png" alt="Certifications OpenClassrooms"></a>
+                <h2>J'ai eu à faire beaucoup de formation <a href="https://openclassrooms.com/fr/" target="_blank">OpenClassrooms</a> où j'ai acquis la majorité des bases de mes connaissances sur le web. </h2>
+                <!-- <i>Consultez les en cliquant sur l'image :)</i> -->
+                <a href="https://drive.google.com/drive/folders/1mTQ98vR_POncLTRs8jGD4eTJoI5U5jHU?usp=sharing" target="_blank" class="oc-cert">
+                    <img src="img/oc.png" alt="Certifications OpenClassrooms">
+                    <span>Consultez mes certifications OpenClassrooms</span>
+                </a>
             </div>
             <div class="other-container-contact">
                 <h1>Contactez moi</h1>
