debut header de la partie competence

--- a/index.html
+++ b/index.html
@@ -258,15 +258,26 @@
     </div>
 
     <div class="experience" id="experience">
+        <div class="experience-cards">
+            <p class="experience-cards-citation">
+                • La connaissance s'acquiert par l'expérience, tout le reste n'est que de l'information.<br>
+                ~ Albert Einstein
+            </p>
+            <div class="experience-cards-title">
+                <h1>Mon expérience</h1>
+                <h2>C'est le moment de vous parler de mon expérience et de certains projet que j'ai eu à réaliser.</h2>
+            </div>
+            <div class="experience-cards-container">
 
+            </div>
+        </div>
     </div>
 
     <div class="other" id="other">
         <div class="other-container">
             <div class="other-container-certification">
                 <h1>Mes certifications</h1>
-                <h2>J'ai eu à faire beaucoup de formation <a href="https://openclassrooms.com/fr/" target="_blank">OpenClassrooms</a> où j'ai acquis la majorité des bases de mes connaissances sur le web. </h2>
-                <!-- <i>Consultez les en cliquant sur l'image :)</i> -->
+                <h2>J'ai eu à faire beaucoup de formation <a href="https://openclassrooms.com/fr/" target="_blank">OpenClassrooms</a> où j'ai acquis la majorité des bases de mes connaissances sur le web. <i>Consultez les en cliquant sur l'image :)</i> </h2>
                 <a href="https://drive.google.com/drive/folders/1mTQ98vR_POncLTRs8jGD4eTJoI5U5jHU?usp=sharing" target="_blank" class="oc-cert">
                     <img src="img/oc.png" alt="Certifications OpenClassrooms">
                     <span>Consultez mes certifications OpenClassrooms</span>
