styliser le header de la partie experience

--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
     <div class="experience" id="experience">
         <div class="experience-cards">
             <p class="experience-cards-citation">
-                • La connaissance s'acquiert par l'expérience, tout le reste n'est que de l'information.<br>
-                ~ Albert Einstein
+                La connaissance s'acquiert par l'expérience, tout le reste n'est que de l'information.<br>
+                • Albert Einstein
             </p>
             <div class="experience-cards-title">
                 <h1>Mon expérience</h1>
