partie experience suite

--- a/index.html
+++ b/index.html
@@ -270,6 +270,10 @@
             <div class="experience-cards-container">
 
             </div>
+            <div class="experience-cards-extern">
+                <p> Vous pouvez voir tout mes projets OpenSource sur mon github.</p>
+                <a href="https://github.com/ln-dev7" target="_blank"><button>OUVRIR MON GITHUB</button></a>
+            </div>
         </div>
     </div>
 
