petite modification sur la nav

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <li><a href="#education">Education</a></li>
             <li><a href="#skillest">Compétences</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#experience">Expericence</a></li>
+            <li><a href="#experience">Expérience</a></li>
             <li><a href="#other">Autres</a></li>
             <li><a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline"></ion-icon></a></li>
             <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
@@ -69,7 +69,7 @@
             <li><a href="#education">Education</a></li>
             <li><a href="#skillest">Compétences</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#experience">Expericence</a></li>
+            <li><a href="#experience">Expérience</a></li>
             <li><a href="#other">Autres</a></li>
         </ul>
         <ul class="navigation-socials">
