Ajout de la chaine et formation YouTube

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <li><a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline"></ion-icon></a></li>
             <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
             <li><a href="https://github.com/ln-dev7" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
+            <li><a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a></li>
             <li><a href="https://www.linkedin.com/in/ln-dev-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
             <li><a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
         </ul>
@@ -76,6 +77,7 @@
             <li><a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline" alt="dasd"></ion-icon></a></li>
             <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
             <li><a href="https://github.com/ln-dev7" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
+            <li><a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a></li>
             <li><a href="https://www.linkedin.com/in/ln-dev-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
             <li><a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
         </ul>
@@ -268,11 +270,18 @@
                 <h2>C'est le moment de vous parler de mon expérience et de certains projet que j'ai eu à réaliser.</h2>
             </div>
             <div class="experience-cards-container">
-
+                
             </div>
-            <div class="experience-cards-extern">
+            <div class="experience-cards-github">
                 <p> Vous pouvez voir tout mes projets OpenSource sur mon github.</p>
                 <a href="https://github.com/ln-dev7" target="_blank"><button>OUVRIR MON GITHUB</button></a>
+            </div>
+            <div class="experience-cards-formation-web">
+                <p> J'ai une formation YouTube en HTML5 et CSS3 que vous pouvez consulter.</p>
+                <a href="https://youtube.com/playlist?list=PLSPOY060zfMnG2JJ3aqYIMKWYQYNVt881" target="_blank" class="form-web">
+                    <img src="img/formation-html5-css3.jpg" alt="FORMATION HTML5 CSS3">
+                    <span>Consultez ma formation HTML5 CSS3</span>
+                </a>
             </div>
         </div>
     </div>
@@ -304,6 +313,7 @@
             <h2>Vous pouvez me suivre sur les réseaux sociaux</h2>
             <div class="footer-container-socials">
                 <a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
+                <a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
                 <a href="https://www.linkedin.com/in/ln-dev-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
                 <a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
             </div>
