--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
                 <h1>Mon expérience</h1>
                 <h2>C'est le moment de vous parler de mon expérience et de certains projet que j'ai eu à réaliser.</h2>
             </div>
-            <div class="experience-cards-container">
+            <!-- <div class="experience-cards-container">
                 
-            </div>
+            </div> -->
             <div class="experience-cards-github">
                 <p> Vous pouvez voir tout mes projets OpenSource sur mon github.</p>
                 <a href="https://github.com/ln-dev7" target="_blank"><button>OUVRIR MON GITHUB</button></a>
