Mise a jour des skills

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="about" id="about">
         <h1 class="about-title">À propos de moi</h1>
         <h2 class="about-about">
-            Je suis un étudiant et développeur front-end web / android vivant au Cameroun.<br>
+            Je suis un étudiant de 18 ans et développeur front-end web vivant au Cameroun.<br>
             Je me veux d'être le plus créatif possible en utilisant mon imagination et mes capacités intellectuelles dans mon travail.<br>
             Mon but est de rendre un site le plus beau et attirant possible.
         </h2>
@@ -203,31 +203,39 @@
             <div class="skillest-cards-container">
                 <div class="skillest-cards-container-card">
                     <ion-icon name="globe-outline" class="circle"></ion-icon>
-                    <p>DEVELOPPEMENT WEB</p>
+                    <p>DEVELOPPEMENT FRONTEND</p>
                     <div>
                         <ion-icon name="logo-html5"></ion-icon>
                         <ion-icon name="logo-css3"></ion-icon>
                         <ion-icon name="logo-sass"></ion-icon>
                         <ion-icon name="logo-javascript"></ion-icon>
                         <ion-icon name="logo-react"></ion-icon>
+                        <span><img src="img/svelte.png" alt="svelte"></span>
+                        <!-- <ion-icon name="logo-android"></ion-icon> -->
                     </div>
                 </div>
                 <div class="skillest-cards-container-card">
-                    <ion-icon name="phone-portrait-outline" class="circle"></ion-icon>
-                    <p>DEVELOPPEMENT MOBILE</p>
+                    <ion-icon name="bonfire" class="circle"></ion-icon>
+                    <p>DEVELOPPEMENT BACKEND</p>
                     <div>
-                        <ion-icon name="logo-android"></ion-icon>
-                        <ion-icon name="logo-react"></ion-icon>
+                        <span><img src="img/php.png" alt="php"></span>
                     </div>
                 </div>
                 <div class="skillest-cards-container-card">
                     <ion-icon name="laptop-outline" class="circle"></ion-icon>
-                    <p>AUTRES SKILLS</p>
+                    <p>OUTILS</p>
                     <div>
-                        <ion-icon name="logo-python"></ion-icon>
                         <ion-icon name="logo-github"></ion-icon>
-                        <ion-icon name="git-branch-outline"></ion-icon>
                         <ion-icon name="logo-figma"></ion-icon>
+                    </div>
+                </div>
+                <div class="skillest-cards-container-card">
+                    <ion-icon name="laptop-outline" class="circle"></ion-icon>
+                    <p>MICROSOFT OFFICE</p>
+                    <div>
+                        <span><img src="img/word.png" alt="word"></span>
+                        <span><img src="img/excel.png" alt="excel"></span>
+                        <span><img src="img/access.png" alt="access"></span>
                     </div>
                 </div>
             </div>
@@ -243,18 +251,18 @@
             <div class="services-cards-container">
                 <div class="services-cards-container-card">
                     <ion-icon name="globe-outline" class="circle"></ion-icon>
-                    <h2>DEVELOPPEMENT WEB</h2>
+                    <h2>DEVELOPPEMENT FRONTEND</h2>
                     <p>
                         Je développe des sites et applications web responsive dans lesquels j'utilise mon inspiration pour avoir une interface belle et compréhensible par l'utilisateur tout en respectant les demandes des clients.
                     </p>
                 </div>
-                <div class="services-cards-container-card">
+                <!-- <div class="services-cards-container-card">
                     <ion-icon name="phone-portrait-outline" class="circle"></ion-icon>
                     <h2>DEVELOPPEMENT MOBILE</h2>
                     <p>
                         Je développe des interfaces pour des applications android avec precautions sur les bésoins du client.
                     </p>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -276,13 +284,13 @@
                 <p> Vous pouvez voir tout mes projets OpenSource sur mon github.</p>
                 <a href="https://github.com/ln-dev7" target="_blank"><button>OUVRIR MON GITHUB</button></a>
             </div>
-            <div class="experience-cards-formation-web">
+            <!-- <div class="experience-cards-formation-web">
                 <p> J'ai une formation YouTube en HTML5 et CSS3 que vous pouvez consulter.</p>
                 <a href="https://youtube.com/playlist?list=PLSPOY060zfMnG2JJ3aqYIMKWYQYNVt881" target="_blank" class="form-web">
                     <img src="img/formation-html5-css3.jpg" alt="FORMATION HTML5 CSS3">
                     <span>Consultez ma formation HTML5 CSS3</span>
                 </a>
-            </div>
+            </div> -->
         </div>
     </div>
 
