Mise a jour du CV

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <li><a href="#services">Services</a></li>
             <li><a href="#experience">Expérience</a></li>
             <li><a href="#other">Autres</a></li>
-            <li><a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline"></ion-icon></a></li>
+            <li><a href="https://drive.google.com/file/d/1jwEHg84Sz9hDLlv7mNT9E297Ty2PFWbO/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline"></ion-icon></a></li>
             <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
             <li><a href="https://github.com/ln-dev7" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
             <li><a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a></li>
@@ -74,7 +74,7 @@
             <li><a href="#other">Autres</a></li>
         </ul>
         <ul class="navigation-socials">
-            <li><a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline" alt="dasd"></ion-icon></a></li>
+            <li><a href="https://drive.google.com/file/d/1jwEHg84Sz9hDLlv7mNT9E297Ty2PFWbO/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline" alt="dasd"></ion-icon></a></li>
             <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
             <li><a href="https://github.com/ln-dev7" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
             <li><a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a></li>
@@ -211,6 +211,7 @@
                         <ion-icon name="logo-javascript"></ion-icon>
                         <ion-icon name="logo-react"></ion-icon>
                         <span><img src="img/svelte.png" alt="svelte"></span>
+                        <!-- <span><img src="img/vuejs.png" alt="js"></span> -->
                         <!-- <ion-icon name="logo-android"></ion-icon> -->
                     </div>
                 </div>
@@ -311,7 +312,7 @@
                     <a href="https://wa.me/message/4NEELB2QRIGUI1" target="_blank"><ion-icon name="logo-whatsapp"></ion-icon></a>
                     <a href="mailto:leonelngoya@gmail.com" target="_blank"><ion-icon name="mail-open-outline"></ion-icon></a>
                 </div>
-                <a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank" class="other-container-cv">TELECHARGER MON CV</a>
+                <a href="https://drive.google.com/file/d/1jwEHg84Sz9hDLlv7mNT9E297Ty2PFWbO/view?usp=drivesdk" target="_blank" class="other-container-cv">TELECHARGER MON CV</a>
             </div>
         </div>
     </div>
