modification de lien linkedin

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
             <li><a href="https://github.com/ln-dev7" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
             <li><a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a></li>
-            <li><a href="https://www.linkedin.com/in/ln-dev-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+            <li><a href="https://www.linkedin.com/in/leonel-ngoya-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
             <li><a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
         </ul>
         </div>
@@ -78,7 +78,7 @@
             <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
             <li><a href="https://github.com/ln-dev7" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
             <li><a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a></li>
-            <li><a href="https://www.linkedin.com/in/ln-dev-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+            <li><a href="https://www.linkedin.com/in/leonel-ngoya-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
             <li><a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
         </ul>
     </nav>
@@ -323,7 +323,7 @@
             <div class="footer-container-socials">
                 <a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
                 <a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
-                <a href="https://www.linkedin.com/in/ln-dev-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+                <a href="https://www.linkedin.com/in/leonel-ngoya-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
                 <a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
             </div>
             <p> &copy; Codé par LN • 2021 | Inspiré de <a href="https://gabrielthecode.com/" target="_blank">Gabriel The Code</a> </p>
