ajout une experience

--- a/index.html
+++ b/index.html
@@ -278,9 +278,47 @@
                 <h1>Mon expérience</h1>
                 <h2>C'est le moment de vous parler de mon expérience et de certains projet que j'ai eu à réaliser.</h2>
             </div>
-            <!-- <div class="experience-cards-container">
-                
-            </div> -->
+            <div class="experience-cards-container">
+                <!-- <div class="experience-cards-container-card">
+                    <div class="experience-cards-container-card-img">
+                        <a href="www.lohce.com" target="_blank"><img src="img/lohce.png" alt="LOHCE"></a>
+                    </div>
+                    <div class="experience-cards-container-card-container">
+                        <h3>Janvier 2022 • Février 2022</h3>
+                        <p class="experience-cards-container-card-container-description">
+                            <b>Stagiaire en tant que Développeur Web</b>
+                            <p>LOHCE • Douala</p>
+                            <h4>Durant ce stage, mon but était de réaliser le prototypage d'un chatbot pour les services de LOHCE</h4>
+                        </p>
+                    </div>
+                </div>
+                <div class="experience-cards-container-card">
+                    <div class="experience-cards-container-card-img">
+                        <a href="" target="_blank"><img src="" alt="WINEXAM"></a>
+                    </div>
+                    <div class="experience-cards-container-card-container">
+                        <h3>Décembre 2021 • Janvier 2022</h3>
+                        <p class="experience-cards-container-card-container-description">
+                            <b>Développeur FrontEnd</b>
+                            <p>WINEXAM • Remote</p>
+                            <h4>Mon but était de développer une interface UI de l'application qui a été par la suite transormé en App VUEJS.</h4>
+                        </p>
+                    </div>
+                </div> -->
+                <div class="experience-cards-container-card">
+                    <div class="experience-cards-container-card-img">
+                        <img src="img/freelance.jpg" alt="FREELANCE">
+                    </div>
+                    <div class="experience-cards-container-card-container">
+                        <h3>Juin 2021 • présent</h3>
+                        <p class="experience-cards-container-card-container-description">
+                            <b>Développeur FrontEnd</b>
+                            <p>Freelance • Douala - Remote</p>
+                            <h4>En tant que freelance j'ai réalisé des sites vitrine et aussi des interfaces web, que vous veriez sur mon <b><a href="github.com/ln-dev7" target="_blank">GitHUb</a></b></h4>
+                        </p>
+                    </div>
+                </div>
+            </div>
             <div class="experience-cards-github">
                 <p> Vous pouvez voir tout mes projets OpenSource sur mon github.</p>
                 <a href="https://github.com/ln-dev7" target="_blank"><button>OUVRIR MON GITHUB</button></a>
