ajout d'un skill

--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
                         <ion-icon name="logo-css3"></ion-icon>
                         <ion-icon name="logo-sass"></ion-icon>
                         <ion-icon name="logo-javascript"></ion-icon>
+                        <span><img src="img/ts.png" alt="ts"></span>
+                        <ion-icon name="logo-angular"></ion-icon>
                         <ion-icon name="logo-react"></ion-icon>
                         <span><img src="img/svelte.png" alt="svelte"></span>
-                        <!-- <span><img src="img/vuejs.png" alt="js"></span> -->
-                        <!-- <ion-icon name="logo-android"></ion-icon> -->
                     </div>
                 </div>
                 <div class="skillest-cards-container-card">
@@ -281,7 +281,7 @@
             <div class="experience-cards-container">
                 <!-- <div class="experience-cards-container-card">
                     <div class="experience-cards-container-card-img">
-                        <a href="www.lohce.com" target="_blank"><img src="img/lohce.png" alt="LOHCE"></a>
+                        <a href="www.lohce.com" target="_blank"><img src="img/lohce.jpg" alt="LOHCE"></a>
                     </div>
                     <div class="experience-cards-container-card-container">
                         <h3>Janvier 2022 • Février 2022</h3>
@@ -291,8 +291,8 @@
                             <h4>Durant ce stage, mon but était de réaliser le prototypage d'un chatbot pour les services de LOHCE</h4>
                         </p>
                     </div>
-                </div>
-                <div class="experience-cards-container-card">
+                </div> -->
+                <!-- <div class="experience-cards-container-card">
                     <div class="experience-cards-container-card-img">
                         <a href="" target="_blank"><img src="" alt="WINEXAM"></a>
                     </div>
