--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                 <a href="https://www.linkedin.com/in/leonel-ngoya-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
                 <a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
             </div>
-            <p> &copy; Codé par LN • 2021 | Inspiré de <a href="https://gabrielthecode.com/" target="_blank">Gabriel The Code</a> </p>
+            <p> &copy; Codé par LN • 2021 - 2022 | Inspiré de <a href="https://gabrielthecode.com/" target="_blank">Gabriel The Code</a> </p>
         </div>
     </footer>
 
