Changement du style de la navBar

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- JS Local -->
     <script src="Scripts/loader.js" defer></script>
     <script src="Scripts/toggleMode.js" defer></script>
+    <script src="Scripts/nav.js" defer></script>
 </head>
 <body>
 
