redfinition du lien relatif

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         </div>
     </footer>
 
-    <a href="#navigation" class="arrow">
+    <a href="#header" class="arrow">
         <ion-icon name="arrow-up-outline"></ion-icon>
     </a>
 
