ajout de la chaine twitch et quelaue modif

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
     </div>
 
     <nav class="navigation" id="navigation">
-        <a href="index.html" class="navigation-logo">< Leonel Ngoya /></a>
+        <a href="index.html" class="navigation-logo">< LN /></a>
         <div class="navigation-burger">
             <div class="navigation-burger-line"></div>
        </div>
        <ul class="navigation-menu">
-            <li><a href="index.html" class="navigation-logo">< Leonel Ngoya /></a></li>
+            <li><a href="index.html" class="navigation-logo">< LN /></a></li>
             <li><a href="#about">Moi</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#skillest">Compétences</a></li>
@@ -62,6 +62,7 @@
             <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
             <li><a href="https://github.com/ln-dev7" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
             <li><a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a></li>
+            <li><a href="https://www.twitch.tv/ln_dev7" target="_blank"><ion-icon name="logo-twitch"></ion-icon></a></li>
             <li><a href="https://www.linkedin.com/in/leonel-ngoya-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
             <li><a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
         </ul>
@@ -79,6 +80,7 @@
             <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
             <li><a href="https://github.com/ln-dev7" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
             <li><a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a></li>
+            <li><a href="https://www.twitch.tv/ln_dev7" target="_blank"><ion-icon name="logo-twitch"></ion-icon></a></li>
             <li><a href="https://www.linkedin.com/in/leonel-ngoya-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
             <li><a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
         </ul>
@@ -302,7 +304,7 @@
                         <p class="experience-cards-container-card-container-description">
                             <b>Développeur FrontEnd</b>
                             <p>WINEXAM • Remote</p>
-                            <h4>Mon but était de développer une interface UI de l'application qui a été par la suite transormé en App VUEJS.</h4>
+                            <h4>Mon but était de développer une interface UI de l'application en VUEJS.</h4>
                         </p>
                     </div>
                 </div> -->
@@ -348,7 +350,7 @@
                 <h1>Contactez moi</h1>
                 <h2>Je demeure disponible à toutes discussions.</h2>
                 <div>
-                    <a href="https://wa.me/message/4NEELB2QRIGUI1" target="_blank"><ion-icon name="logo-whatsapp"></ion-icon></a>
+                    <a href="https://wa.me/message/NW7FLTOYPETQN1" target="_blank"><ion-icon name="logo-whatsapp"></ion-icon></a>
                     <a href="mailto:leonelngoya@gmail.com" target="_blank"><ion-icon name="mail-open-outline"></ion-icon></a>
                 </div>
                 <a href="https://drive.google.com/file/d/1tj6WwxPgAyW0Zic0zfXo5LKliPvxlxab/view?usp=drivesdk" target="_blank" class="other-container-cv">TELECHARGER MON CV</a>
@@ -361,8 +363,9 @@
             <h2>Vous pouvez me suivre sur les réseaux sociaux</h2>
             <div class="footer-container-socials">
                 <a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
-                <a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
                 <a href="https://www.linkedin.com/in/leonel-ngoya-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+                <a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
+                <a href="https://www.twitch.tv/ln_dev7" target="_blank"><ion-icon name="logo-twitch"></ion-icon></a>
                 <a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
             </div>
             <p> &copy; Codé par LN • 2021 - 2022 | Inspiré de <a href="https://gabrielthecode.com/" target="_blank">Gabriel The Code</a> </p>
