--- a/index.html
+++ b/index.html
@@ -281,7 +281,20 @@
                 <h1>Mon expérience</h1>
                 <h2>C'est le moment de vous parler de mon expérience et de certains projet que j'ai eu à réaliser.</h2>
             </div>
-            <div class="experience-cards-container">
+            <!-- <div class="experience-cards-container">
+                <div class="experience-cards-container-card">
+                    <div class="experience-cards-container-card-img">
+                        <a href="https://www.mboadigital.tech/" target="_blank"><img src="img/mboa.jpg" alt="MBOA DIGITAL"></a>
+                    </div>
+                    <div class="experience-cards-container-card-container">
+                        <h3>24 Janvier 2022 • 23 Avril 2022</h3>
+                        <p class="experience-cards-container-card-container-description">
+                            <b>Consultant stagiaire</b>
+                            <p>MBOA DIGITAL • Remote - KRYSLAND, Ekie</p>
+                            <h4>Mon dans ce stage etait l'implementation des maquettes.</h4>
+                        </p>
+                    </div>
+                </div> -->
                 <!-- <div class="experience-cards-container-card">
                     <div class="experience-cards-container-card-img">
                         <a href="www.lohce.com" target="_blank"><img src="img/lohce.jpg" alt="LOHCE"></a>
