ajout de la formation youtube

--- a/index.html
+++ b/index.html
@@ -343,6 +343,19 @@
                         </p>
                     </div>
                 </div> -->
+                <!-- <div class="experience-cards-container-card">
+                    <div class="experience-cards-container-card-img">
+                        <a href="" target="_blank"><img src="img/winexam.svg" alt="WINEXAM" style="width: 300px;"></a>
+                    </div>
+                    <div class="experience-cards-container-card-container">
+                        <h3>Décembre 2021 • Janvier 2022</h3>
+                        <p class="experience-cards-container-card-container-description">
+                            <b>Développeur FrontEnd</b>
+                            <p>WINEXAM • Remote</p>
+                            <h4>Mon but était de développer une interface UI de l'application en VUEJS.</h4>
+                        </p>
+                    </div>
+                </div> -->
                 <div class="experience-cards-container-card">
                     <div class="experience-cards-container-card-img">
                         <a href="www.lohce.com" target="_blank"><img src="img/lohce.jpg" alt="LOHCE"></a>
@@ -356,19 +369,6 @@
                         </p>
                     </div>
                 </div>
-                <!-- <div class="experience-cards-container-card">
-                    <div class="experience-cards-container-card-img">
-                        <a href="" target="_blank"><img src="" alt="WINEXAM"></a>
-                    </div>
-                    <div class="experience-cards-container-card-container">
-                        <h3>Décembre 2021 • Janvier 2022</h3>
-                        <p class="experience-cards-container-card-container-description">
-                            <b>Développeur FrontEnd</b>
-                            <p>WINEXAM • Remote</p>
-                            <h4>Mon but était de développer une interface UI de l'application en VUEJS.</h4>
-                        </p>
-                    </div>
-                </div> -->
                 <div class="experience-cards-container-card">
                     <div class="experience-cards-container-card-img">
                         <img src="img/freelance.jpg" alt="FREELANCE">
@@ -388,13 +388,13 @@
                 <p> Vous pouvez voir tout mes projets OpenSource sur mon github.</p>
                 <a href="https://github.com/ln-dev7" target="_blank"><button>OUVRIR MON GITHUB</button></a>
             </div>
-            <!-- <div class="experience-cards-formation-web">
+            <div class="experience-cards-formation-web">
                 <p> J'ai une formation YouTube en HTML5 et CSS3 que vous pouvez consulter.</p>
                 <a href="https://youtube.com/playlist?list=PLSPOY060zfMnG2JJ3aqYIMKWYQYNVt881" target="_blank" class="form-web">
                     <img src="img/formation-html5-css3.jpg" alt="FORMATION HTML5 CSS3">
                     <span>Consultez ma formation HTML5 CSS3</span>
                 </a>
-            </div> -->
+            </div>
         </div>
     </div>
 
