modif du boutton de contact

--- a/index.html
+++ b/index.html
@@ -415,11 +415,8 @@
                 <h1>Contactez moi</h1>
                 <h2>Je demeure disponible à toutes discussions.</h2>
                 <div>
-                    <a href="https://wa.me/message/NW7FLTOYPETQN1" target="_blank">
-                        <ion-icon name="logo-whatsapp"></ion-icon>
-                    </a>
                     <a href="mailto:leonelngoya@gmail.com" target="_blank">
-                        <ion-icon name="mail-open-outline"></ion-icon>
+                        <button>GO !!!</button>
                     </a>
                 </div>
                 <a href="https://drive.google.com/file/d/1tj6WwxPgAyW0Zic0zfXo5LKliPvxlxab/view?usp=drivesdk"
